--- a/environment.yml
+++ b/environment.yml
@@ -9,6 +9,7 @@ dependencies:
   - r-base=3.5.1
   - bioconductor-biocinstaller=1.32.1
   - bioconductor-scran=1.10.1
+  - #bioconductor-slingshot=1.4.0
   - scipy==1.1.0
   - statsmodels==0.9.0
   - numba=0.43.0
@@ -18,10 +19,12 @@ dependencies:
   - cython
   - pip
   - pip:
-    - scanpy==1.4
+    - scanpy==1.4.3
     - jupyter
     - jupyterlab
     - matplotlib
     - seaborn
     - sklearn
     - numpy
+    - gprofiler-official==1.0.0
+    - git+https://github.com/flying-sheep/anndata2ri.git
