--- a/environment.yml
+++ b/environment.yml
@@ -24,6 +24,6 @@ dependencies:
     - matplotlib
     - seaborn
     - sklearn
-    - numpy
     - gprofiler-official==1.0.0
     - git+https://github.com/flying-sheep/anndata2ri.git
+    - numpy==1.18.0
