added tool versions

--- a/environment.yml
+++ b/environment.yml
@@ -2,47 +2,47 @@ channels:
  - conda-forge
  - bioconda
 dependencies:
- - cmake
- - r-essentials
- - r-rgl
- - scipy
- - gsl
- - tzlocal
- - simplegeneric
- - natsort
- - h5py
- - tqdm
- - patsy
- - llvmlite
- - numba
- - networkx
- - joblib
- - numexpr
- - pytables
- - seaborn
- - statsmodels
- - python-igraph
- - louvain
- - r-rcpp
- - r-rngtools
- - r-stringi
- - r-devtools
- - r-gam
- - r-rcolorbrewer
- - r-biocmanager
- - bioconductor-rhdf5lib
- - bioconductor-scran
- - bioconductor-mast
- - bioconductor-monocle
- - bioconductor-complexheatmap
- - bioconductor-clusterexperiment
- - bioconductor-slingshot
+ - cmake=3.16.2=h28c56e5_1
+ - r-essentials==3.6=r36_2001
+ - r-rgl=0.100.30=r36ha687ee4_0
+ - scipy=1.4.1=py36h921218d_0
+ - gsl=2.6=h294904e_0
+ - tzlocal=2.0.0=py_0
+ - simplegeneric=0.8.1=py_1
+ - natsort=7.0.0=py_0
+ - h5py=2.10.0=nompi_py36h513d04c_101
+ - tqdm=4.41.1=py_0
+ - patsy=0.5.1=py_0
+ - llvmlite=0.31.0=py36h8b12597_0
+ - numba=0.47.0=py36hb3f55d8_0
+ - networkx=2.4=py_0
+ - joblib=0.14.1=py_0
+ - numexpr=2.7.1=py36hb3f55d8_0
+ - pytables=3.6.1=py36h9f153d1_0
+ - seaborn=0.9.0=py_2
+ - statsmodels=0.10.2=py36hc1659b7_0
+ - python-igraph=0.7.1.post7=py36h516909a_0
+ - louvain=0.6.1=py36he1b5a44_2
+ - r-rcpp=1.0.3=r36h0357c0b_0
+ - r-rngtools=1.4=r36h6115d3f_1
+ - r-stringi=1.4.3=r36h29659fb_0
+ - r-devtools=2.2.1=r36h6115d3f_0
+ - r-gam=1.16.1=r36h9bbef5b_2
+ - r-rcolorbrewer=1.1_2=r36h6115d3f_1002
+ - r-biocmanager=1.30.10=r36h6115d3f_0
+ - bioconductor-rhdf5lib=1.8.0=r36h516909a_0
+ - bioconductor-scran=1.14.1=r36he1b5a44_0
+ - bioconductor-mast=1.12.0=r36_0
+ - bioconductor-monocle=2.14.0=r36he1b5a44_1
+ - bioconductor-complexheatmap=2.2.0=r36_0
+ - bioconductor-clusterexperiment=2.6.0=r36he1b5a44_0
+ - bioconductor-slingshot=1.4.0=r36_0
  - pip
  - pip:
-   - MulticoreTSNE
-   - anndata
-   - fa2
-   - gprofiler-official
-   - scanpy
-   - rpy2
+   - MulticoreTSNE==0.1
+   - anndata==0.6.22.post1
+   - fa2==0.3.5
+   - gprofiler-official==1.0.0
+   - scanpy==1.4.5.post2
+   - rpy2==3.2.4
    - git+https://github.com/flying-sheep/anndata2ri
