added package leidenalg

--- a/environment.yml
+++ b/environment.yml
@@ -45,4 +45,5 @@ dependencies:
    - gprofiler-official==1.0.0
    - scanpy==1.4.5.post2
    - rpy2==3.2.4
+   - leidenalg==0.7.0
    - git+https://github.com/flying-sheep/anndata2ri
