updated examples and templates

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
-templates/.ipynb_checkpoints/scanpy_single_sample_analysis_v0.0.1-checkpoint.ipynb
+templates/.ipynb_checkpoints/*
+examples/.ipynb_checkpoints/*
