--- a/environment.yml
+++ b/environment.yml
@@ -18,7 +18,7 @@ dependencies:
  - conda-forge::numba=0.47.0=py36hb3f55d8_0
  - conda-forge::networkx=2.4=py_0
  - conda-forge::joblib=0.14.1=py_0
- - conda-forge::umexpr=2.7.1=py36hb3f55d8_0
+ - conda-forge::numexpr=2.7.1=py36hb3f55d8_0
  - conda-forge::pytables=3.6.1=py36h9f153d1_0
  - conda-forge::seaborn=0.9.0=py_2
  - conda-forge::statsmodels=0.10.2=py36hc1659b7_0
