--- a/environment.yml
+++ b/environment.yml
@@ -48,4 +48,5 @@ dependencies:
    - rpy2==3.2.4
    - leidenalg==0.7.0
    - plotly==4.4.1
+   - jupyter_server_proxy
    - git+https://github.com/flying-sheep/anndata2ri
