--- a/environment.yml
+++ b/environment.yml
@@ -3,39 +3,39 @@ channels:
  - bioconda
  - r
 dependencies:
- - conda-forge::cmake
- - conda-forge::r-essentials
- - conda-forge::scipy
- - conda-forge::gsl
- - conda-forge::tzlocal
- - conda-forge::simplegeneric
- - conda-forge::natsort
- - conda-forge::h5py
- - conda-forge::tqdm
- - conda-forge::patsy
- - conda-forge::llvmlite
- - conda-forge::numba
- - conda-forge::networkx
- - conda-forge::joblib
- - conda-forge::numexpr
- - conda-forge::pytables
- - conda-forge::statsmodels
- - conda-forge::python-igraph
- - conda-forge::louvain
- - conda-forge::r-rcpp
- - conda-forge::r-devtools
- - conda-forge::r-rcolorbrewer
- - conda-forge::r-biocmanager
- - bioconda::bioconductor-scran
- - bioconda::bioconductor-slingshot
+ - conda-forge::cmake=3.18.4=h1f3970d_0
+ - conda-forge::r-essentials=4.0=r40_2002
+ - conda-forge::gsl=2.6=hf94e986_0
+ - conda-forge::tzlocal=2.1=pyh9f0ad1d_0
+ - conda-forge::simplegeneric=0.8.1=py_1
+ - conda-forge::natsort=7.1.0=pyhd8ed1ab_0
+ - conda-forge::h5py=3.1.0=nompi_py36hc1bc4f5_100
+ - conda-forge::tqdm=4.53.0=pyhd8ed1ab_1
+ - conda-forge::patsy=0.5.1=py_0
+ - conda-forge::llvmlite=0.34.0=py36hfa65bc7_2
+ - conda-forge::numba=0.51.2=py36h7c3b610_0
+ - conda-forge::networkx=2.5=py_0
+ - conda-forge::joblib=0.17.0=py_0
+ - conda-forge::numexpr=2.7.1=py36h7c3b610_3
+ - conda-forge::pytables=3.6.1=py36hd57f836_3
+ - conda-forge::statsmodels=0.12.1=py36ha112f06_1
+ - conda-forge::python-igraph=0.8.3=py36h76a8ce2_2
+ - conda-forge::louvain=0.6.1=py36h831f99a_3
+ - conda-forge::r-rcpp=1.0.5=r40he524a50_0
+ - conda-forge::r-devtools=2.3.2=r40h6115d3f_0
+ - conda-forge::r-rcolorbrewer=1.1_2=r40h6115d3f_1003
+ - conda-forge::r-biocmanager=1.30.10=r40h6115d3f_1
+ - bioconda::bioconductor-scran=1.18.0=r40h5f743cb_0
+ - bioconda::bioconductor-slingshot=1.8.0=r40_0
  - pip
  - pip:
-   - MulticoreTSNE
-   - anndata
-   - fa2
-   - gprofiler-official
-   - scanpy
-   - leidenalg
-   - plotly
-   - cellbrowser
-   - git+https://github.com/flying-sheep/anndata2ri
+   - MulticoreTSNE==0.1
+   - anndata==0.7.5
+   - fa2==0.3.5
+   - gprofiler-official==1.0.0
+   - scanpy==1.6.
+   - scipy==1.5.4
+   - leidenalg==0.8.3
+   - plotly==4.13.0
+   - cellbrowser==0.7.15
+   - git+https://github.com/flying-sheep/anndata2ri==1.0.5.dev2+ea266ab
