--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,9 @@ channels:
  - conda-forge
  - bioconda
 dependencies:
+ - conda-forge::cython
+ - conda-forge::python=3.6.9
+ - conda-forge::r-irkernel
  - conda-forge::cmake
  - conda-forge::r-base=3.5.1
  - conda-forge::r-essentials
@@ -253,6 +256,15 @@ dependencies:
  - bioconda::bioconductor-zlibbioc
  - pip
  - pip:
+   - pandas
+   - numpy
+   - rpy2
+   - jupyter-server-proxy
+   - scikit-learn
+   - jupyter
+   - jupyterlab
+   - matplotlib
+   - seaborn
    - MulticoreTSNE
    - anndata
    - fa2
