--- a/environment.yml
+++ b/environment.yml
@@ -253,10 +253,10 @@ dependencies:
    - anndata==0.7.5
    - fa2==0.3.5
    - gprofiler-official==1.0.0
-   - scanpy==1.6.
+   - scanpy==1.7.2
    - scipy==1.5.4
    - leidenalg==0.8.3
    - umap-learn==0.4.6
    - plotly==4.13.0
-   - cellbrowser==0.7.15
+   - cellbrowser==1.0.1
    - git+https://github.com/flying-sheep/anndata2ri
