--- a/environment.yml
+++ b/environment.yml
@@ -255,6 +255,9 @@ dependencies:
    - gprofiler-official==1.0.0
    - scanpy==1.7.2
    - scipy==1.5.4
+   - scrublet==0.2.3
+   - phate==1.0.7
+   - PhenoGraph==1.5.7
    - leidenalg==0.8.3
    - umap-learn==0.4.6
    - plotly==4.13.0
