--- a/environment.yml
+++ b/environment.yml
@@ -2,255 +2,27 @@ channels:
  - conda-forge
  - bioconda
 dependencies:
- - conda-forge::cmake=3.18.4=h1f3970d_0
- - conda-forge::r-essentials=4.0=r40_2002
- - conda-forge::gsl=2.6=hf94e986_0
- - conda-forge::tzlocal=2.1=pyh9f0ad1d_0
- - conda-forge::simplegeneric=0.8.1=py_1
- - conda-forge::natsort=7.1.0=pyhd8ed1ab_0
- - conda-forge::h5py=3.1.0=nompi_py36hc1bc4f5_100
- - conda-forge::tqdm=4.53.0=pyhd8ed1ab_1
- - conda-forge::patsy=0.5.1=py_0
- - conda-forge::llvmlite=0.34.0=py36hfa65bc7_2
- - conda-forge::numba=0.51.2=py36h7c3b610_0
- - conda-forge::networkx=2.5=py_0
- - conda-forge::joblib=0.17.0=py_0
- - conda-forge::numexpr=2.7.1=py36h7c3b610_3
- - conda-forge::pytables=3.6.1=py36hd57f836_3
- - conda-forge::statsmodels=0.12.1=py36ha112f06_1
- - conda-forge::python-igraph=0.8.3=py36h76a8ce2_2
- - conda-forge::louvain=0.6.1=py36h831f99a_3
- - conda-forge::r-rcpp=1.0.5=r40he524a50_0
- - conda-forge::r-devtools=2.3.2=r40h6115d3f_0
- - conda-forge::r-rcolorbrewer=1.1_2=r40h6115d3f_1003
- - conda-forge::r-biocmanager=1.30.10=r40h6115d3f_1
- - conda-forge::r-ape=5.4_1=r40h51c796c_0
- - conda-forge::r-askpass=1.1=r40hcdcec82_2
- - conda-forge::r-assertthat=0.2.1=r40h6115d3f_2
- - conda-forge::r-backports=1.2.0=r40h9e2df91_0
- - conda-forge::r-base64enc=0.1_3=r40hcdcec82_1004
- - conda-forge::r-bh=1.72.0_3=r40h6115d3f_1
- - conda-forge::r-bitops=1.0_6=r40hcdcec82_1004
- - conda-forge::r-blob=1.2.1=r40h6115d3f_1
- - conda-forge::r-boot=1.3_25=r40h6115d3f_1
- - conda-forge::r-brew=1.0_6=r40h6115d3f_1003
- - conda-forge::r-brio=1.1.0=r40h9e2df91_1
- - conda-forge::r-broom=0.7.2=r40h142f84f_0
- - conda-forge::r-callr=3.5.1=r40h142f84f_0
- - conda-forge::r-caret=6.0_86=r40hcdcec82_2
- - conda-forge::r-cellranger=1.1.0=r40h6115d3f_1003
- - conda-forge::r-class=7.3_17=r40hcdcec82_1
- - conda-forge::r-cli=2.2.0=r40hc72bb7e_0
- - conda-forge::r-clipr=0.7.1=r40h142f84f_0
- - conda-forge::r-cluster=2.1.0=r40h31ca83e_4
- - conda-forge::r-codetools=0.2_18=r40hc72bb7e_0
- - conda-forge::r-colorspace=2.0_0=r40h9e2df91_0
- - conda-forge::r-commonmark=1.7=r40hcdcec82_1002
- - conda-forge::r-covr=3.5.1=r40h0357c0b_0
- - conda-forge::r-cpp11=0.2.4=r40hc72bb7e_0
- - conda-forge::r-crayon=1.3.4=r40h6115d3f_1003
- - conda-forge::r-crosstalk=1.1.0.1=r40h6115d3f_1
- - conda-forge::r-crul=1.0.0=r40h6115d3f_0
- - conda-forge::r-curl=4.3=r40hcdcec82_1
- - conda-forge::r-data.table=1.13.2=r40h0eb13af_0
- - conda-forge::r-dbi=1.1.0=r40h6115d3f_1
- - conda-forge::r-dbplyr=2.0.0=r40hc72bb7e_0
- - conda-forge::r-desc=1.2.0=r40h6115d3f_1003
- - conda-forge::r-diffobj=0.3.2=r40h9e2df91_1
- - conda-forge::r-digest=0.6.27=r40h1b71b39_0
- - conda-forge::r-dplyr=1.0.2=r40h0357c0b_0
- - conda-forge::r-dqrng=0.2.1=r40h0357c0b_2
- - conda-forge::r-dt=0.16=r40h142f84f_0
- - conda-forge::r-ellipsis=0.3.1=r40hcdcec82_0
- - conda-forge::r-essentials=4.0=r40_2002
- - conda-forge::r-evaluate=0.14=r40h6115d3f_2
- - conda-forge::r-fansi=0.4.1=r40hcdcec82_1
- - conda-forge::r-farver=2.0.3=r40h0357c0b_1
- - conda-forge::r-fastmap=1.0.1=r40h0357c0b_1
- - conda-forge::r-forcats=0.5.0=r40h6115d3f_1
- - conda-forge::r-foreach=1.5.1=r40h142f84f_0
- - conda-forge::r-foreign=0.8_80=r40hcdcec82_0
- - conda-forge::r-formatr=1.7=r40h6115d3f_2
- - conda-forge::r-fs=1.5.0=r40h0357c0b_0
- - conda-forge::r-futile.logger=1.4.3=r40h6115d3f_1003
- - conda-forge::r-futile.options=1.0.1=r40h6115d3f_1002
- - conda-forge::r-generics=0.1.0=r40hc72bb7e_0
- - conda-forge::r-ggplot2=3.3.2=r40hc72bb7e_1
- - conda-forge::r-gh=1.1.0=r40h6115d3f_1
- - conda-forge::r-gistr=0.9.0=r40h6115d3f_0
- - conda-forge::r-git2r=0.27.1=r40h7253d3a_0
- - conda-forge::r-glmnet=4.0_2=r40h31ca83e_1
- - conda-forge::r-glue=1.4.2=r40hcdcec82_0
- - conda-forge::r-gower=0.2.2=r40hcdcec82_0
- - conda-forge::r-gtable=0.3.0=r40h6115d3f_3
- - conda-forge::r-haven=2.3.1=r40hde08347_0
- - conda-forge::r-hexbin=1.28.1=r40h31ca83e_2
- - conda-forge::r-highr=0.8=r40h6115d3f_2
- - conda-forge::r-hms=0.5.3=r40h6115d3f_1
- - conda-forge::r-htmltools=0.5.0=r40h0357c0b_0
- - conda-forge::r-htmlwidgets=1.5.2=r40h142f84f_0
- - conda-forge::r-httpcode=0.3.0=r40_1
- - conda-forge::r-httpuv=1.5.4=r40h0357c0b_0
- - conda-forge::r-httr=1.4.2=r40h6115d3f_0
- - conda-forge::r-igraph=1.2.6=r40h084b37e_1
- - conda-forge::r-ini=0.3.1=r40h6115d3f_1003
- - conda-forge::r-ipred=0.9_9=r40hcdcec82_2
- - conda-forge::r-irdisplay=0.7=r40_1002
- - conda-forge::r-irkernel=1.1.1=r40h6115d3f_0
- - conda-forge::r-irlba=2.3.3=r40h7fa42b6_3
- - conda-forge::r-isoband=0.2.2=r40h0357c0b_0
- - conda-forge::r-iterators=1.0.13=r40h142f84f_0
- - conda-forge::r-jsonlite=1.7.1=r40hcdcec82_0
- - conda-forge::r-kernsmooth=2.23_18=r40h7679c2e_0
- - conda-forge::r-knitr=1.30=r40h6115d3f_0
- - conda-forge::r-labeling=0.4.2=r40h142f84f_0
- - conda-forge::r-lambda.r=1.2.4=r40h6115d3f_1
- - conda-forge::r-later=1.1.0.1=r40h0357c0b_0
- - conda-forge::r-lattice=0.20_41=r40hcdcec82_2
- - conda-forge::r-lava=1.6.8.1=r40hc72bb7e_0
- - conda-forge::r-lazyeval=0.2.2=r40hcdcec82_2
- - conda-forge::r-lifecycle=0.2.0=r40h6115d3f_1
- - conda-forge::r-locfit=1.5_9.4=r40hcdcec82_1
- - conda-forge::r-lubridate=1.7.9.2=r40he524a50_0
- - conda-forge::r-magrittr=2.0.1=r40h9e2df91_1
- - conda-forge::r-maps=3.3.0=r40hcdcec82_1004
- - conda-forge::r-markdown=1.1=r40hcdcec82_1
- - conda-forge::r-mass=7.3_53=r40hcdcec82_0
- - conda-forge::r-matrix=1.2_18=r40h7fa42b6_3
- - conda-forge::r-matrixstats=0.57.0=r40hcdcec82_0
- - conda-forge::r-memoise=1.1.0=r40h6115d3f_1004
- - conda-forge::r-mgcv=1.8_33=r40h7fa42b6_0
- - conda-forge::r-mime=0.9=r40hcdcec82_1
- - conda-forge::r-modelmetrics=1.2.2.2=r40h0357c0b_1
- - conda-forge::r-modelr=0.1.8=r40h6115d3f_0
- - conda-forge::r-munsell=0.5.0=r40h6115d3f_1003
- - conda-forge::r-nlme=3.1_150=r40h31ca83e_0
- - conda-forge::r-nnet=7.3_14=r40hcdcec82_1
- - conda-forge::r-numderiv=2016.8_1.1=r40h6115d3f_3
- - conda-forge::r-openssl=1.4.3=r40he5c4762_0
- - conda-forge::r-pbdzmq=0.3_3.1=r40h6ee94b7_1
- - conda-forge::r-pillar=1.4.7=r40hc72bb7e_0
- - conda-forge::r-pkgbuild=1.1.0=r40h6115d3f_0
- - conda-forge::r-pkgconfig=2.0.3=r40h6115d3f_1
- - conda-forge::r-pkgload=1.1.0=r40h0357c0b_0
- - conda-forge::r-plyr=1.8.6=r40h0357c0b_1
- - conda-forge::r-praise=1.0.0=r40h6115d3f_1004
- - conda-forge::r-prettyunits=1.1.1=r40h6115d3f_1
- - conda-forge::r-princurve=2.1.5=r40h0357c0b_0
- - conda-forge::r-proc=1.16.2=r40h0357c0b_1
- - conda-forge::r-processx=3.4.4=r40hcdcec82_0
- - conda-forge::r-prodlim=2019.11.13=r40h0357c0b_1
- - conda-forge::r-progress=1.2.2=r40h6115d3f_2
- - conda-forge::r-promises=1.1.1=r40h0357c0b_0
- - conda-forge::r-pryr=0.1.4=r40h0357c0b_1004
- - conda-forge::r-ps=1.4.0=r40h0eb13af_0
- - conda-forge::r-purrr=0.3.4=r40hcdcec82_1
- - conda-forge::r-quantmod=0.4.17=r40h6115d3f_1
- - conda-forge::r-r6=2.5.0=r40hc72bb7e_0
- - conda-forge::r-randomforest=4.6_14=r40h31ca83e_1004
- - conda-forge::r-rbokeh=0.5.1=r40h6115d3f_0
- - conda-forge::r-rcmdcheck=1.3.3=r40h6115d3f_3
- - conda-forge::r-rcppannoy=0.0.17=r40he524a50_0
- - conda-forge::r-rcpphnsw=0.3.0=r40h0357c0b_0
- - conda-forge::r-rcurl=1.98_1.2=r40hcdcec82_1
- - conda-forge::r-readr=1.4.0=r40h1b71b39_0
- - conda-forge::r-readxl=1.3.1=r40hde08347_4
- - conda-forge::r-recipes=0.1.15=r40hc72bb7e_0
- - conda-forge::r-recommended=4.0=r40_1004
- - conda-forge::r-rematch=1.0.1=r40h6115d3f_1003
- - conda-forge::r-rematch2=2.1.2=r40h6115d3f_1
- - conda-forge::r-remotes=2.2.0=r40h6115d3f_0
- - conda-forge::r-repr=1.1.0=r40h6115d3f_1
- - conda-forge::r-reprex=0.3.0=r40h6115d3f_2
- - conda-forge::r-reshape2=1.4.4=r40h0357c0b_1
- - conda-forge::r-rex=1.2.0=r40h6115d3f_1
- - conda-forge::r-rlang=0.4.8=r40h9e2df91_0
- - conda-forge::r-rmarkdown=2.5=r40h142f84f_0
- - conda-forge::r-roxygen2=7.1.1=r40h0357c0b_0
- - conda-forge::r-rpart=4.1_15=r40hcdcec82_2
- - conda-forge::r-rprojroot=2.0.2=r40hc72bb7e_0
- - conda-forge::r-rstudioapi=0.13=r40hc72bb7e_0
- - conda-forge::r-rsvd=1.0.3=r40h6115d3f_1
- - conda-forge::r-rversions=2.0.2=r40h6115d3f_0
- - conda-forge::r-rvest=0.3.6=r40h6115d3f_0
- - conda-forge::r-scales=1.1.1=r40h6115d3f_0
- - conda-forge::r-selectr=0.4_2=r40h6115d3f_1
- - conda-forge::r-sessioninfo=1.1.1=r40h6115d3f_1002
- - conda-forge::r-shape=1.4.5=r40_0
- - conda-forge::r-shiny=1.5.0=r40h6115d3f_0
- - conda-forge::r-sitmo=2.0.1=r40h0357c0b_2
- - conda-forge::r-snow=0.4_3=r40h6115d3f_1002
- - conda-forge::r-sourcetools=0.1.7=r40he1b5a44_1002
- - conda-forge::r-spatial=7.3_12=r40hcdcec82_1
- - conda-forge::r-squarem=2020.5=r40h142f84f_0
- - conda-forge::r-statmod=1.4.35=r40h6e990d7_1
- - conda-forge::r-stringi=1.5.3=r40h604b29c_0
- - conda-forge::r-stringr=1.4.0=r40h6115d3f_2
- - conda-forge::r-survival=3.2_7=r40hcdcec82_0
- - conda-forge::r-sys=3.4=r40hcdcec82_0
- - conda-forge::r-testthat=3.0.0=r40he524a50_0
- - conda-forge::r-tibble=3.0.4=r40h0eb13af_0
- - conda-forge::r-tidyr=1.1.2=r40h0357c0b_0
- - conda-forge::r-tidyselect=1.1.0=r40h6115d3f_0
- - conda-forge::r-tidyverse=1.3.0=r40h6115d3f_2
- - conda-forge::r-timedate=3043.102=r40h6115d3f_1002
- - conda-forge::r-tinytex=0.27=r40hc72bb7e_0
- - conda-forge::r-triebeard=0.3.0=r40he1b5a44_1003
- - conda-forge::r-ttr=0.24.2=r40hcdcec82_0
- - conda-forge::r-urltools=1.7.3=r40h0357c0b_2
- - conda-forge::r-usethis=1.6.3=r40h6115d3f_0
- - conda-forge::r-utf8=1.1.4=r40hcdcec82_1003
- - conda-forge::r-uuid=0.1_4=r40hcdcec82_1
- - conda-forge::r-vctrs=0.3.5=r40h9e2df91_0
- - conda-forge::r-viridislite=0.3.0=r40h6115d3f_1003
- - conda-forge::r-waldo=0.2.3=r40hc72bb7e_0
- - conda-forge::r-whisker=0.4=r40h6115d3f_1
- - conda-forge::r-withr=2.3.0=r40h6115d3f_0
- - conda-forge::r-xfun=0.19=r40h9e2df91_0
- - conda-forge::r-xml2=1.3.2=r40h0357c0b_1
- - conda-forge::r-xopen=1.0.0=r40h6115d3f_1003
- - conda-forge::r-xtable=1.8_4=r40h6115d3f_3
- - conda-forge::r-xts=0.12.1=r40hcdcec82_0
- - conda-forge::r-yaml=2.2.1=r40hcdcec82_1
- - conda-forge::r-zeallot=0.1.0=r40h6115d3f_1002
- - conda-forge::r-zoo=1.8_8=r40hcdcec82_0
- - bioconda::bioconductor-mast=1.16.0=r40_0
- - bioconda::bioconductor-monocle=2.18.0=r40h5f743cb_1
- - bioconda::bioconductor-complexheatmap=2.6.0=r40_0
- - bioconda::bioconductor-clusterexperiment=2.10.0=r40h5f743cb_0
- - bioconda::bioconductor-scran=1.18.0=r40h5f743cb_0
- - bioconda::bioconductor-slingshot=1.8.0=r40_0
- - bioconda::bioconductor-beachmat=2.6.0=r40h5f743cb_0
- - bioconda::bioconductor-biobase=2.50.0=r40h037d062_0
- - bioconda::bioconductor-biocgenerics=0.36.0=r40_0
- - bioconda::bioconductor-biocneighbors=1.8.0=r40h5f743cb_0
- - bioconda::bioconductor-biocparallel=1.24.0=r40h5f743cb_0
- - bioconda::bioconductor-biocsingular=1.6.0=r40h5f743cb_0
- - bioconda::bioconductor-bluster=1.0.0=r40h5f743cb_1
- - bioconda::bioconductor-delayedarray=0.16.0=r40h037d062_0
- - bioconda::bioconductor-delayedmatrixstats=1.12.0=r40_0
- - bioconda::bioconductor-edger=3.32.0=r40h5f743cb_0
- - bioconda::bioconductor-genomeinfodb=1.26.0=r40_0
- - bioconda::bioconductor-genomeinfodbdata=1.2.4=r40_0
- - bioconda::bioconductor-genomicranges=1.42.0=r40h037d062_0
- - bioconda::bioconductor-hdf5array=1.18.0=r40h037d062_0
- - bioconda::bioconductor-iranges=2.24.0=r40h037d062_0
- - bioconda::bioconductor-limma=3.46.0=r40h037d062_0
- - bioconda::bioconductor-matrixgenerics=1.2.0=r40_0
- - bioconda::bioconductor-rhdf5=2.34.0=r40h5f743cb_0
- - bioconda::bioconductor-rhdf5filters=1.2.0=r40h5f743cb_0
- - bioconda::bioconductor-rhdf5lib=1.12.0=r40h037d062_0
- - bioconda::bioconductor-s4vectors=0.28.0=r40h037d062_0
- - bioconda::bioconductor-scuttle=1.0.0=r40h5f743cb_0
- - bioconda::bioconductor-singlecellexperiment=1.12.0=r40_0
- - bioconda::bioconductor-sparsematrixstats=1.2.0=r40h5f743cb_0
- - bioconda::bioconductor-summarizedexperiment=1.20.0=r40_0
- - bioconda::bioconductor-xvector=0.30.0=r40h037d062_0
- - bioconda::bioconductor-zlibbioc=1.36.0=r40h037d062_0
+ - conda-forge::cmake
+ - conda-forge::gsl
+ - conda-forge::tzlocal
+ - conda-forge::simplegeneric
+ - conda-forge::natsort
+ - conda-forge::h5py
+ - conda-forge::tqdm
+ - conda-forge::patsy
+ - conda-forge::llvmlite
+ - conda-forge::numba
+ - conda-forge::networkx
+ - conda-forge::joblib
+ - conda-forge::numexpr
+ - conda-forge::pytables
+ - conda-forge::statsmodels
+ - conda-forge::python-igraph
+ - conda-forge::louvain
  - pip
  - pip:
    - MulticoreTSNE==0.1
-   - anndata==0.7.5
+   - anndata==0.7.6
    - fa2==0.3.5
    - gprofiler-official==1.0.0
    - scanpy==1.7.2
@@ -258,8 +30,8 @@ dependencies:
    - scrublet==0.2.3
    - phate==1.0.7
    - PhenoGraph==1.5.7
-   - leidenalg==0.8.3
-   - umap-learn==0.4.6
-   - plotly==4.13.0
+   - leidenalg==0.8.4
+   - umap-learn==0.5.1
+   - plotly==4.14.4
    - cellbrowser==1.0.1
    - git+https://github.com/flying-sheep/anndata2ri
