--- a/environment.yml
+++ b/environment.yml
@@ -16,9 +16,9 @@ dependencies:
    - anndata==0.7.6
    - fa2==0.3.5
    - scanpy==1.7.2
-   - scipy=1.6.3
+   - scipy==1.6.3
    - scrublet==0.2.3
-   - scikit-learn==0.23.2
+   - scikit-learn==0.24.2
    - phate==1.0.7
    - PhenoGraph==1.5.7
    - leidenalg==0.8.4
@@ -30,3 +30,5 @@ dependencies:
    - hnswlib==0.5.1
    - velocyto==0.17.17
    - umap-learn==0.4.6
+   - matplotlib==3.4.1
+   - matplotlib-inline==0.1.2
